--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SendTweetActivity"></activity>
+        <activity android:name=".SendTweetActivity" />
         <activity android:name=".TwitterUsers" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
